io-hotmoka-examples/src/main/java/io/hotmoka/examples/errors/inconsistentthrowsexceptions2/Sub.java
package io.hotmoka.examples.errors.inconsistentthrowsexceptions2;

public class Sub extends Super {
	public void m() {}
}